--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,180 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    background-color: var(--bg-main-color);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  background-color: var(--bg-main-color);
 }
 
-:root{
-    --bg-main-color: #111213;
-    --text-main-color: #ffff;
-    --btn-bg-color: #306AD9;
-    --btn-bg-color-hover: #4177DC;
-    --btn-bg-color-active: #608CE2;
-    --icon-color: #BABeC4;
+:root {
+  --bg-main-color: #111213;
+  --text-main-color: #ffff;
+  --btn-bg-color: #306ad9;
+  --btn-bg-color-hover: #4177dc;
+  --btn-bg-color-active: #608ce2;
+  --icon-color: #babec4;
+}
+
+body {
+  font-family: "Exo regular";
+  color: var(--text-main-color);
+  background-color: var(--bg-main-color);
+  overflow-x: hidden;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+/* ---------------------- header started ---------------------- */
+header {
+  width: 100%;
+  height: auto;
+  background-color: transparent;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+}
+
+.nav__list {
+  display: flex;
+  justify-content: space-between;
+  width: 40%;
+}
+
+.nav__list--item {
+  list-style-type: none;
+}
+
+.nav__list--item-link {
+  text-decoration: none;
+  color: var(--text-main-color);
+}
+
+.active {
+  text-shadow: 0px 0px 32px #346dda;
+  color: var(--btn-bg-color-hover);
+}
+
+.nav__list--item-link:hover {
+  color: var(--icon-color);
+}
+
+/* ---------------------- header finished ---------------------- */
+
+/* ---------------------- intro section started ---------------------- */
+
+.intro {
+  width: 100%;
+  height: auto;
+}
+
+.intro::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  left: -138px;
+  top: -28px;
+  background: rgba(55, 74, 109, 0.5);
+  filter: blur(90px);
 }
 
 
+.intro::after {
+    content: "";
+    /* display: block; */
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    right: -20px;
+    /* left: 1031px; */
+    top: 404px;
+    
+    background: rgba(55, 74, 109, 0.5);
+    filter: blur(90px);
+  }
 
-body{
-    font-family: 'Exo regular';
-    color: var(--text-main-color);
+
+.wrapper {
+  text-align: center;
+}
+
+.intro__title {
+  font-family: "Exo semibold";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 39px;
+  /* line-height: 140%; */
+  margin-top: 72px;
+}
+
+.intro__subtitle {
+  font-family: "Exo semibold";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 140%;
+}
+
+.wrapper span {
+  font-family: "Exo regular";
+  font-weight: 400;
+  font-size: 16px;
+  margin-top: 8px;
+  display: block;
+  color: var(--icon-color);
+}
+
+.intro__car {
+  margin-top: 48px;
+}
+
+.intro__info {
+  width: 406px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 40px auto;
+  height: 104px;
+}
+
+.intro__start {
+  width: 90px;
+  height: 90px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 140%;
+  margin: 91px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: 2px solid green;
+  border-radius: 50%;
+  filter: drop-shadow(0px 0px 16px #02db8a);
+}
+
+.intro__start h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 2px solid #099260;
+  font-weight: 500;
+  font-size: 14px;
+  transition: all 0.2s;
+}
+
+.intro__start:hover .intro__start h2 {
+  filter: drop-shadow(0px 0px 16px #02db8a);
 }
