--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,11 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  background-color: var(--bg-main-color);
+  /* background-color: var(--bg-main-color); */
 }
 
 :root {
-  --bg-main-color: #111213;
+  --bg-main-color:  #0A0A0B;
   --text-main-color: #ffff;
   --btn-bg-color: #306ad9;
   --btn-bg-color-hover: #4177dc;
@@ -192,6 +192,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 88px;
 }
 
 .about__img {
@@ -273,4 +274,236 @@ header {
   font-size: 16px;
   line-height: 140%;
   color: white;
+}
+
+/* --------------------------------- */
+
+.popular {
+  padding: 72px 48px;
+}
+
+.popular__title {
+  margin: 0 auto 50px;
+  max-width: 270px;
+  width: 100%;
+  font-family: "Exo semibold";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 140%;
+  text-align: center;
+  color: #f1f2f3;
+}
+
+.popular__cards{
+  /* margin-top: 80px; */
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.popular__card {
+  width: 258px;
+  height: 328px;
+  background: #111213;
+  border-radius: 20px;
+  padding: 32px 22px 24px;
+  position: relative;
+  overflow: hidden;
+}
+
+.popular__card::before{
+  content: "";
+  display: block;
+  position: absolute;
+  width: 180px;
+  height: 180px;
+  left: -40px;
+  top: -48px;
+  background: rgba(55, 74, 109, 0.5);
+  filter: blur(60px);
+}
+
+.popular__card--title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 140%;
+  color: white;
+  width: 100%;
+  background-color: transparent;
+}
+
+.popular__card--text {
+  font-size: 16px;
+  line-height: 140%;
+  color: #babec4;
+  width: 100%;
+  margin-bottom: 12px;
+  background-color: transparent;
+
+}
+
+.popular__card--img{
+  background-color: transparent;
+}
+
+.popular__card--info{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: transparent;
+  margin-bottom: 34px;
+}
+
+
+.popular__card--info-desc{
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  max-width: 90px;
+  width: 100%;
+  margin-bottom: 8px;
+  background-color: transparent;
+}
+
+
+
+.popular__card--price{
+  width: 100%;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 140%;
+  background-color: transparent;
+  color: white;
+}
+
+
+.popular__shopping--wrapper{
+  width: 56px;
+  height: 48px;
+  background: var(--btn-bg-color);
+  border-radius: 20px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position:absolute;
+  bottom: 0;
+  right: 0;
+}
+
+
+.popular__shopping--wrapper img{
+  background-color:transparent;
+}
+
+.dots{
+  width: 100%;
+  padding: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+}
+
+/* >>>>>>>>>>>>>  Popular finished  <<<<<<<<<<<<<< */
+
+
+/* >>>>>>>>>>>>>  Feature started  <<<<<<<<<<<<<< */
+
+.feature{
+  width: 100%;
+}
+
+.feature__container{
+  height: 713px;
+  /* width: 100%; */
+}
+
+.feature__title{
+  /* margin: 0 auto 30px;
+  max-width: 160px;
+  width: 100%; */
+  text-align: center;
+  font-family: 'Exo semibold';
+font-weight: 600;
+font-size: 24px;
+line-height: 140%;
+}
+
+.feature__bg{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  /* bottom: 142px; */
+  padding: 42px auto;
+}
+
+.bg__image{
+  position: absolute;
+  left: 105px;
+  top: 20px;
+}
+
+.bg__image img{
+  width: 750px;
+  height: 805.42px;
+}
+
+.car__image{
+  position:absolute;
+  left: 430px;
+  top: 160px;
+  background-color: transparent;
+}
+
+
+/* >>>>>>>>>>>>>  Feature finished  <<<<<<<<<<<<<< */
+
+
+/* .cars{
+  width: 100%;
+  height: 900px;
+} */
+
+.cars__section{
+  display: flex;
+  flex-direction: column;
+  margin-top: 72px;
+}
+
+.cars__title{
+  font-family: 'Exo semibold';
+font-style: normal;
+font-weight: 600;
+font-size: 24px;
+line-height: 140%;
+text-align: center;
+color: #F1F2F3;
+/* margin-bottom: 100px; */
+}
+
+.car__logos{
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  margin: 48px auto 0;
+  align-items: center;
+}
+
+.car__logos--item{
+  list-style: none;
+align-items: center;
+}
+
+.luxury__cars{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.luxury__card{
+  margin: 40px 30px;
 }
