--- a/styles/style.css
+++ b/styles/style.css
@@ -500,7 +500,7 @@ align-items: center;
 
 .luxury__cars{
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   flex-wrap: wrap;
 }
 
